--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this project is to test various service worker functionality",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Satyam Singh (satyam0507@gmail.com)",
   "license": "ISC",
@@ -13,5 +13,9 @@
     "body-parser": "^1.15.2",
     "express-handlebars": "^3.0.0",
     "sw-toolbox": "^3.6.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
