--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "this project is to test various service worker functionality",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "gulp testModule",
+    "start": "node index.js"
   },
   "author": "Satyam Singh (satyam0507@gmail.com)",
   "license": "ISC",
@@ -17,7 +19,15 @@
     "sw-toolbox": "^3.6.0"
   },
   "devDependencies": {
+    "browserify": "^13.1.0",
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sourcemaps": "^2.3.1",
+    "mocha": "^3.2.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
